--- a/Entropy/Of Entropy and Order.html
+++ b/Entropy/Of Entropy and Order.html
@@ -12481,7 +12481,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3>  However, when I accidently entered a large enough number for num_attempts, some alternate distributions emerged. </h3>
+<h3>  However, when I accidentally entered a large number for num_attempts, some alternate distributions emerged. </h3>
 </div>
 </div>
 </div>
